Make text more legible and fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ body::before {
   }
 }
 
+h1, h2, h3 {
+  margin: 0;
+}
+
 fieldset {
   border: none;
 }
@@ -161,9 +165,9 @@ input[type=range] {
 
 .container {
   display: grid;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: auto;
   place-items: center;
-  max-width: 700px;
+  max-width: 800px;
   padding: 0 4em;
   margin: auto;
   height: auto;
@@ -204,14 +208,17 @@ input[type=range] {
 
 .title {
   font-size: 6em;
-  /* padding: 0 1em; */
+  text-shadow: #555 2px 2px 2px;
+  padding: 10px 1em;
 }
 
 .description {
   font-style: italic;
   font-weight: normal;
+  text-shadow: #333 2px 2px 1px;
   opacity: 0.6;
-  /* margin: 2em 0; */
+  padding: 2em 0;
+  margin-bottom: 0.5em;
 }
 
 .button {
@@ -233,6 +240,7 @@ input[type=range] {
 
 .button:hover {
   background-color: var(--button-hover-color);
+  cursor: pointer;
 }
 
 .question-container {
@@ -242,27 +250,31 @@ input[type=range] {
 
 .question-header {
   font-size: 1.5em;
-  color: #ccc;
+  color: var(--main-text);
+  opacity: 0.5;
 }
 
 .question-text {
   font-size: 1.3em;
   font-style: italic;
+  text-shadow: #555 2px 2px 3px;
   /* text-align: justify; */
   line-height: 1.3;
   border-left: 5px solid #ccc;
+  max-width: 600px;
   margin: 1.75em auto;
   padding: 0 10px;
   width: 100%;
 }
 
+.question-label {
+  padding: 1em;
+  text-shadow: #555 2px 2px 3px;
+}
+
 .input-container {
   display: grid;
   justify-content: center;
-}
-
-.question-label {
-  padding: 1em;
 }
 
 .cta-container {
